--- a/NotesApp/package.json
+++ b/NotesApp/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/prateeksarangi/Learn_Node#readme",
   "dependencies": {
+    "chalk": "^4.1.0",
     "validator": "^13.1.1"
   }
 }
